--- a/src/volunteer-form/volunteer-form.module.scss
+++ b/src/volunteer-form/volunteer-form.module.scss
@@ -26,7 +26,7 @@
 
 .header {
   margin: 0 0 20px;
-  max-width: 0.8 * config.$form-width;
+  max-width: 520px;
 }
 
 .description {
